app/src/styles.scss
/* You can add global styles to this file, and also import other style files */

// use angular material library
@use '@angular/material' as mat;
// include the core components of angular material
@include mat.core();
// define dark theme
$dark-theme: mat.define-dark-theme((
  color: (
    primary: mat.define-palette(mat.$deep-purple-palette),
    accent: mat.define-palette(mat.$blue-grey-palette),
  ),
  // only include `typography` and `density` in the default dark theme
  typography: mat.define-typography-config(),
  density: 0,
));
// define light theme
$light-theme: mat.define-light-theme((
  color: (
    primary: mat.define-palette(mat.$deep-purple-palette),
    accent: mat.define-palette(mat.$amber-palette),
  ),
));
// apply dark theme by default
@include mat.core-theme($dark-theme);
@include mat.button-theme($dark-theme);
@include mat.fab-theme($dark-theme);
@include mat.toolbar-theme($dark-theme);
@include mat.slide-toggle-theme($dark-theme);
@include mat.button-toggle-theme($dark-theme);
@include mat.sidenav-theme($dark-theme);
@include mat.menu-theme($dark-theme);
@include mat.icon-theme($dark-theme);
@include mat.card-theme($dark-theme);
@include mat.tabs-theme($dark-theme);
@include mat.list-theme($dark-theme);
@include mat.divider-theme($dark-theme);
// apply light theme when user prefers light themes
@media (prefers-color-scheme: light) {
  // use the `-color` mixins to only apply color styles without reapplying the same typography and density styles
  @include mat.core-color($light-theme);
  @include mat.button-color($light-theme);
  @include mat.fab-color($light-theme);
  @include mat.toolbar-color($light-theme);
  @include mat.slide-toggle-color($light-theme);
  @include mat.button-toggle-color($light-theme);
  @include mat.sidenav-color($light-theme);
  @include mat.menu-color($light-theme);
  @include mat.icon-color($light-theme);
  @include mat.card-color($light-theme);
  @include mat.tabs-color($light-theme);
  @include mat.list-color($light-theme);
  @include mat.divider-color($light-theme);
}
// dark theme class
.dark-theme{
  @include mat.core-color($dark-theme);
  @include mat.button-color($dark-theme);
  @include mat.fab-color($dark-theme);
  @include mat.toolbar-color($dark-theme);
  @include mat.slide-toggle-color($dark-theme);
  @include mat.button-toggle-color($dark-theme);
  @include mat.sidenav-color($dark-theme);
  @include mat.menu-color($dark-theme);
  @include mat.icon-color($dark-theme);
  @include mat.card-color($dark-theme);
  @include mat.tabs-color($dark-theme);
  @include mat.list-color($dark-theme);
  @include mat.divider-color($dark-theme);
}
// light theme class
.light-theme{
  @include mat.core-color($light-theme);
  @include mat.button-color($light-theme);
  @include mat.fab-color($light-theme);
  @include mat.toolbar-color($light-theme);
  @include mat.slide-toggle-color($light-theme);
  @include mat.button-toggle-color($light-theme);
  @include mat.sidenav-color($light-theme);
  @include mat.menu-color($light-theme);
  @include mat.icon-color($light-theme);
  @include mat.card-color($light-theme);
  @include mat.tabs-color($light-theme);
  @include mat.list-color($light-theme);
  @include mat.divider-color($light-theme);
}

// layout and typography styles
html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

// control overall layout and navigation
.menu-spacer-full {
  flex: 1 1 auto;
}
.menu-spacer-small {
  width: 1em;
}
.page-header {
  height: 10dvh !important;
}
.page-container {
  height: 90dvh;
}
.page-content {
  padding: 0 0;
}
.navigation-sidebar{
  padding: 1dvh 1dvw;
}

// ensures tab card content fills page height
.tab-group {
  height: 100%;
}
.mat-mdc-tab-body-wrapper {
  height: 100%;
}
.card-container {
  height: 100%;
}

// control the formatting of card on home page
.page-card {
  width: 80%;
  margin-top: 4dvh;
  margin-left: auto;
  margin-right: auto;
  border-radius: 0.5em !important;
}
@media only screen and (min-width: 1200px) {
  .card-divider {
    visibility: hidden;
  }
  .card-content {
    text-align: center;
  }
  .card-header {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }
  .page-card {
    margin-top: 8dvh;
    border-radius: 1em !important;
  }
}

// style random icon selector
.random-icon {
  margin-top: 4dvh;
  width: 100%;
  text-align: center;
}
.random-icon h3, .random-icon button {
  margin-left: auto;
  margin-right: auto;
}

// style card list
.mdc-list-item__secondary-text {
  white-space: normal !important;
  padding-bottom: 10px;
}
.card-list-item {
  height: min-content !important;
}
.mat-mdc-list-item-icon {
  margin-left: 0 !important;
  margin-right: 0.25em !important;
}
@media only screen and (min-width: 1200px) {
  .mat-divider {
    visibility: hidden;
  }
}

